feat(API) Add REST API with imperative programming
openapi.yml needs changes according to business logic and nullable objects
